<resources>
    <string name="app_name">Retired Brainiacs</string>
    <string name="err_name">Please Enter Name…</string>
    <string name="err_phn">Please Enter Phone…</string>
    <string name="err_phn1">Phone No. should be of 10 Digits…</string>
    <string name="err_email">Please Enter Email…</string>
    <string name="err_msg_email">Please Enter valid Email…</string>
    <string name="err_msg_password">Please Enter Password…</string>
    <string name="err_pswd">Password should be of 6 or More Characters…</string>
    <string name="err_cnfrmpswd">Password MisMatch…</string>
    <string name="gender">Gender</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Full Name*</string>
    <string name="skype">Enter Skype Id</string>
    <string name="city">City</string>
    <string name="adrs1">Street Address Line One</string>
    <string name="adrs2">Street Address Line Two</string>
    <string name="zipcode">Postal Zip Code</string>
    <string name="phn">Enter Mobile Number</string>
    <string name="emailid">Email Id*</string>
    <string name="pswd">Password*</string>
    <string name="cnfrm_pswd">Confirm Password*</string>
    <string name="mobile">Mobile*</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_store">Store</string>
    <string name="title_classified">Classified</string>
    <string name="title_friends">Friends</string>
    <string name="title_more">More</string>
    <string name="facebook_app_id">190948631576499</string>
   <string name="com_twitter_sdk_android_CONSUMER_KEY">r9DgNHtzaxc0etQTszi7hg9VS</string>
   <string name="com_twitter_sdk_android_CONSUMER_SECRET">Kor2D4Px817qdIuSAEANWDn8twetF7FhKbpprq0mZrRWOSxQZG</string>
    <string name="google_places_key">AIzaSyA6cHfcPc-mN31nlGxpRcmfy7uuFYXfz_Q</string>

</resources>

