<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/friends"
        android:title="@string/title_friends" />
    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/forum"
        android:title="@string/title_forum" />

    <!--<item
        android:id="@+id/navigation_store"
        android:icon="@drawable/store"
        android:visible="false"
        android:title="@string/title_store" />-->
    <item
        android:id="@+id/navigation_classified"
        android:icon="@drawable/classified"
        android:title="@string/title_classified" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more"
        android:title="@string/title_more" />
</menu>
