<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="15dp"
    android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your name"
            android:inputType="textCapSentences"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_phn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_phn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phn"
            android:inputType="phone"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_skype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_skype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skype"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/txt_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Country"
            android:textSize="14sp"
            android:padding="3dp"
            android:visibility="gone"
            android:textColor="@color/theme_color_orange"/>
        <Spinner
            android:id="@+id/spin_country"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_height="40dp"
            ></Spinner>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textCapSentences"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_adrs1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_adrs1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adrs1"
            android:inputType="textCapSentences"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_adrs2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_adrs2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adrs2"
            android:inputType="textCapSentences"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_zipccode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zipcode"
            android:inputType="textCapSentences"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Picture"
            android:layout_marginStart="15dp"
            android:padding="3dp"
            android:textSize="16sp"
            android:textColor="@color/theme_color_orange"/>
        <RelativeLayout
            android:id="@+id/lay_upload"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center_horizontal">
            <RelativeLayout
                android:id="@+id/lay_browse_profile"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@drawable/cmnt_bg">
                <ImageView
                    android:id="@+id/attach_profile"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="7dp"
                    android:src="@drawable/clip"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/attach_profile"
                    android:layout_centerInParent="true"
                    android:text="Browse"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/no_file"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/lay_browse_profile"
                android:layout_centerInParent="true"
                android:text="No file chosen"
                android:gravity="center"
                android:layout_marginStart="7dp"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/userImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="30dp"
    android:orientation="horizontal"
    android:weightSum="4">
    <Button
        android:id="@+id/btn_pre"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:background="@drawable/verify_bg"
        android:text="Previous"/>
    <Button
        android:id="@+id/btn_save_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textAllCaps="false"
        android:background="@drawable/login_bg"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:textColor="@android:color/white"
        android:text="Save &amp; Continue"/>
    <Button
        android:id="@+id/btn_skip1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:background="@drawable/verify_bg"
        android:text="Skip"/>

</LinearLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>